k8ssandra/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8ssandra-operator 
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: cassandra-cluster
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: cassandra-client 
  labels:
    istio-injection: enabled
