k8ssandra/cluster.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: cassandra-cluster-allow
  namespace: cassandra-cluster
spec: 
  selector:
    matchLabels:
      cassandra.datastax.com/cluster: demo-cassandra
  action: ALLOW
  rules:
  - from:
    - source:
        serviceAccounts:
        - k8ssandra-operator/k8ssandra-operator 
        - k8ssandra-operator/k8ssandra-operator-cass-operator 
    to:
      - operation:
          ports: ["8080"]
  - from:
    - source:
        serviceAccounts:
        - default
    to:
      - operation:
          ports: ["7000"]
---
apiVersion: v1
kind: Service
metadata:
  name: demo-cassandra-node 
  namespace: cassandra-cluster 
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: internode 
      port: 7000
      protocol: TCP
      targetPort: 7000
  publishNotReadyAddresses: true
  selector:
    cassandra.datastax.com/cluster: demo-cassandra
